@@ -674,6 +674,13 @@ RC37:
   o SW based feedback loops won't lead to endless repeated replies
 
 
+RC38:
+  o added DEFAULT_CC32_FILTER switch to setup_*.asm - it filters CC#32 for
+    programs which send this CC always together with CC#0 on bank changes
+
+  o support for "extended SysEx dump" - see also mbsidv2_sysex_implementation.txt
+
+
 MEMO:
   - in Bassline mode, CCs could control individual knob parameters for
     left/right channel by using the "current" assignment, and selecting
